--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,4 +1,4 @@
-<body style="text-align: center;background-color: {{COLOR}};">
+<body style="text-align: center;background-color: red;">
    <H1>PÁGINA DE TESTE</H1>
 
     <h3> Servidor que processou a requisição - {{ maquina }} </h3> 
